--- a/Activity 2/index.html
+++ b/Activity 2/index.html
@@ -58,13 +58,13 @@
       <td><img src="https://upload.wikimedia.org/wikipedia/en/0/0b/Your_Name_poster.png" alt="Yourname" width="250" height="350"></td>
       <td><img src="https://m.media-amazon.com/images/M/MV5BZmZkZjNhMWMtM2U0Mi00MjdlLTk3NmMtMTMwZjgwOTJmODMzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Black Clover" width="250" height="350"></td>
       <td><img src="https://cdn.myanimelist.net/images/anime/1171/109222.jpg" alt="Jujutsu Kaizen" width="250" height="350"></td>
-      <td><img src="https://static.wikia.nocookie.net/witch-watch/images/4/4f/WW_Second_KV.png/revision/latest?cb=20250216175903" alt="Witch Watch" width="250" height="350"></td>
+      <td><img src="image/witch.webp" alt="Witch Watch" width="250" height="350"></td>
     </tr>
 
     <!-- Left, middle, right -->
     <tr>
       <td><img src="https://m.media-amazon.com/images/M/MV5BYTgyZDhmMTEtZDFhNi00MTc4LTg3NjUtYWJlNGE5Mzk2NzMxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Death Note" width="250" height="350"></td>
-      <td><img src="https://static.wikia.nocookie.net/voiceacting/images/d/d0/Naruto_Shippuden_new.JPG/revision/latest/scale-to-width-down/985?cb=20211031034133" alt="Naruto" width="250" height="350"></td>
+      <td><img src="image/naruto.webp" alt="Naruto" width="250" height="350"></td>
       <td colspan="2" rowspan="6"><img src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_.jpg" alt="One Piece" height="755" width="500"></td>
     </tr>
 
