--- a/Activity-3/landing-page.html
+++ b/Activity-3/landing-page.html
@@ -55,7 +55,7 @@
             <i class="bi bi-fonts fs-1"></i>
             <h4 class="mt-3">Activity 1: Text Formatting</h4>
             <p>Learn how to use HTML to style text with headings, bold, italics, and more.</p>
-            <a href="./Activity-1/index.html" class="btn btn-primary mt-2">Open Activity 1</a>
+            <a href="../Activity-1/index.html" target="_blank" class="btn btn-primary mt-2">Open Activity 1</a>
           </div>
         </div>
         <div class="col-md-4">
@@ -63,7 +63,7 @@
             <i class="bi bi-table fs-1"></i>
             <h4 class="mt-3">Activity 2: Tables</h4>
             <p>Create structured tables with rows, columns, and styled layouts.</p>
-            <a href="./Activity-2/index.html" class="btn btn-primary mt-2">Open Activity 2</a>
+            <a href="../Activity-2/index.html" class="btn btn-primary mt-2">Open Activity 2</a>
           </div>
         </div>
         <div class="col-md-4">
@@ -71,7 +71,7 @@
             <i class="bi bi-box-arrow-in-right fs-1"></i>
             <h4 class="mt-3">Activity 3: Login & Landing Page</h4>
             <p>Build a login form with validation and redirect users to a landing page.</p>
-            <a href="./Activity-3/index.html" class="btn btn-primary mt-2">Open Activity 3</a>
+            <a href="../Activity-3/index.html" class="btn btn-primary mt-2">Open Activity 3</a>
           </div>
         </div>
       </div>
