--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <a href="./Activity-1/index.html"> Activity 1</a>
             <br>
             <a href="./Activity-2/index.html"> Activity 2</a>
-                        <br>
+            <br>
             <a href="./Activity-3/index.html"> Activity 3</a>
+            <br>
+            <a href="./Activity-4/index.html"> Activity 4</a>
         </main>
     </center>
 </body>
