--- a/Activity-4/index.html
+++ b/Activity-4/index.html
@@ -70,7 +70,7 @@
             <h4 class="mt-3">Automated Payroll System in C++</h4>
             <p>An Automated Payroll System in C++ that streamlines employee salary computation, 
                 deductions, and payslip generation for faster and more accurate payroll management.</p>
-            <a href="git@github.com:JerichoBelino/Automated-Payroll-System.git" target="_blank" class="btn btn-primary mt-2">View Project</a>
+            <a href="https://github.com/JerichoBelino/Automated-Payroll-System" target="_blank" class="btn btn-primary mt-2">View Project</a>
           </div>
         </div>
         <div class="col-md-4">
