jQuery validation activity

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <a href="./Activity-3/index.html"> Activity 3</a>
             <br>
             <a href="./Activity-4/index.html"> Activity 4</a>
+                        <br>
+            <a href="./jQuery/index.html"> jQuery Validation Activity</a>
         </main>
     </center>
 </body>
